syntax = "proto3";

package blockjoy.api.ui_v1;

import "common.proto";

message GetHostProvisionRequest {
  RequestMeta meta = 1;
  optional string id = 2;
}

message GetHostProvisionResponse {
  ResponseMeta meta = 1;
  repeated HostProvision host_provisions = 2;
}

message CreateHostProvisionRequest {
  RequestMeta meta = 1;
  string ip_range_from = 2;
  string ip_range_to = 3;
  string ip_gateway = 4;
}

message CreateHostProvisionResponse {
  ResponseMeta meta = 1;
}

/* Host provisioning */
service HostProvisionService {
  /* Get a single host provision identified by ID or a list of all available
   * host provisions */
  rpc Get(GetHostProvisionRequest) returns (GetHostProvisionResponse);
  /* Create a single host provision */
  rpc Create(CreateHostProvisionRequest) returns (CreateHostProvisionResponse);
}
